k8s/apps/default/jellyfin/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  serviceName: jellyfin
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 50Gi
        storageClassName: ceph-block
        volumeMode: Filesystem
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
      nodeSelector:
        nas: local
      volumes:
        - name: transcode
          emptyDir: {}
        - name: arr-media
          persistentVolumeClaim:
            claimName: bighorse-arr-media
            readOnly: true
      containers:
        - name: jellyfin
          image: ghcr.io/onedr0p/jellyfin:rolling@sha256:e8261917f46218861abc990d65959a799610ee336e215a3661cb16bb2b7ad7aa
          resources:
            requests:
              cpu: 250m
              memory: 4096Mi
            limits:
              memory: 4096Mi
          ports:
            - containerPort: 8096
              name: web
            - containerPort: 1900
              name: discovery-1
              protocol: UDP
            - containerPort: 7359
              name: discovery-2
              protocol: UDP
          volumeMounts:
            - name: transcode
              mountPath: /transcode
            - name: config
              mountPath: /config
            - name: arr-media
              mountPath: /data
